# easypipeline

./: LICENSE  README.md  pyproject.toml
src/easypipe/: core.py
tests/: test_core__make_pipeline.py  test_core__pipeline__call.py  test_core__pipeline__run.py
