[project]
name = "easypipe"
version = "0.0.2b1"
description = "Chaining functions execution made easy"
readme = "README.md"
authors = [
    { name = "Alessandro Finamore", email = "mail@afinamore.io" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython",
    "pytest",
]
rich = [
    "rich",
]
